reflectapi-demo/tests/errors/invalid_reflect_attribute_path3.rs
#[derive(serde::Deserialize, reflectapi::Output)]
struct MyStruct {
    #[reflectapi(output_type = "invalid")]
    field: u32,
}

fn main() {}
